--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "recharts": "^2.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
@@ -56,9 +56,9 @@
     "zod": "^3.24.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "browserslist": {
     "production": [
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
     "@eslint/js": "9.23.0",
     "autoprefixer": "^10.4.20",
     "eslint": "9.23.0",
